[gd_scene load_steps=9 format=3 uid="uid://bqkmbet5kph2s"]

[ext_resource type="Script" uid="uid://dr4sog01mj4aa" path="res://Scenes/Menus/MainMenu/main_menu.gd" id="1_qq57v"]
[ext_resource type="FontFile" uid="uid://4nieqk7v3br8" path="res://Assets/Fonts/Kenney Rocket.ttf" id="2_y4ryc"]
[ext_resource type="Theme" uid="uid://coiuj78tsqptn" path="res://Assets/Themes/label.tres" id="3_7f67a"]
[ext_resource type="AudioStream" uid="uid://1iyjrgu8jacl" path="res://Assets/Sound/Music/EGJ25_Musique_Menu_V1.mp3" id="4_gphap"]
[ext_resource type="AudioStream" uid="uid://7tdhdpra43ph" path="res://Assets/Sound/UI/EGJ25_UI_Hover_V1.mp3" id="5_yobja"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_lkur8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_o0cfa"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_c3tdx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq57v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_lkur8")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 166.0
offset_right = 804.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("2_y4ryc")
theme_override_font_sizes/font_size = 76
text = "Trouble"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -196.0
offset_right = 114.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Play"

[node name="HelpBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Help"

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Credits"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Quit"

[node name="HelpUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_o0cfa")
stretch_mode = 1

[node name="Label" type="Label" parent="HelpUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7f67a")
text = "OSKOUR"

[node name="HelpBackBtn" type="Button" parent="HelpUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -38.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7f67a")
text = "Back"

[node name="CreditsUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_c3tdx")
stretch_mode = 6

[node name="Label" type="Label" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7f67a")
text = "Made with <3 by

Hugo Lefebvre \"Lumirevery\" - Game Designer
Julien Di Natale \"Avoltance\" - Game Designer & Developer
Louise \"ashisia\" - Developer
Miggeroo - Art
Piroporopi - Art
Shashamisen - Sound Design & Music
Thomas Rogulski \"Totoro\" - Game Designer & Developer


Credits to

Kenney - Font assets"

[node name="CreditsBackBtn" type="Button" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7f67a")
text = "Back"

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gphap")
autoplay = true
bus = &"Music"

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yobja")
bus = &"SFX"

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]

[node name="StartGame" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="HelpUI/HelpBackBtn" to="." method="_on_help_back_btn_pressed"]
[connection signal="pressed" from="CreditsUI/CreditsBackBtn" to="." method="_on_credits_back_btn_pressed"]
